Fixed visualization mobile bugs & adding styles

--- a/boletines/assets/css/main.css
+++ b/boletines/assets/css/main.css
@@ -9,6 +9,14 @@ a {
     color: #203A43;
 }
 
+.link-game:hover {
+    opacity: 0.5;
+}
+
+.link-game:visited {
+    color: #6cb0d5;
+}
+
 
 .container {
     background: #0F2027;  /* fallback for old browsers */
@@ -21,36 +29,43 @@ a {
 }
 
 .content {
-    max-width: 1260px;
-    max-height: 550px;
+    max-width: 1000px;
+    max-height: 600px;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     border-radius: 25px;
     background-color: #c0e0de;
+    position: relative;
+    padding: 1.8em;
+    overflow: scroll;
 }
 
 .content-game {
-    max-width: 960px;
-    max-height: 500px;
+    max-width: 1000px;
+    max-height: 560px;
     width: 100%;
     height: 100%;
     background-color: #c0e0de;
     border-radius: 5px;
-    position: absolute;
+    position: relative;
+    overflow: scroll;
 }
 
 .table {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 100%;
     border-spacing: 0;
 }
 
 .table td, .table th {
-    padding: 1em;
+    padding: 10px;
     text-align: center;
 }
 
-.table tr:nth-child(odd) {
+.table tr:nth-child(even) {
+    background-color: #A0C9E0;
+}
+
+thead {
     background-color: #A0C9E0;
 }
 
@@ -70,43 +85,101 @@ a {
 }
 
 .title-item {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-bottom: solid 2px #203A43;
     padding-bottom: 20px;
+    font-size: 2em;
+    margin-bottom: auto;
+}
+
+.header-game {
+    padding: 1em;
 }
 
 .position {
     background-color: #203A43;
     color: white;
-    padding: 10px;
+    padding: 7px;
     border-radius: 5px;
+    margin-right: 0.5em;
 }
 
 .text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: justify;
     margin: auto;
-    width: 75%;
+    padding: 2em;
 }
 
 .home {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #203A43;
-    margin: 0px 4px 4px 0px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
     color: white;
-    border-radius: 20px;
-    padding: 8px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    box-shadow: 2px 2px 2px 0px #203A43;
+    position: absolute; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    top: 1em;
+    right: 1em;
+    cursor: pointer;
 }
 
+.home:hover {
+    background-color: #6cb0d5;
+    box-shadow: 2px 2px 2px 0px #2C5364;
+}
+
+
 .container-image {
-   width: 25%;
-   margin: auto;
+   display: flex;
+   justify-content: center;
+   align-content: center;
+   margin-bottom: 0.5em;
 }
 
 .game-image {
     width: 250px;
     height: 150px;
     border-radius: 5px;
+}
+
+img {
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+    .content {
+        padding: 1em;
+    }
+    td {
+        display: block;
+        width: 100%;
+    }
+    td:nth-of-type(1) {
+        font-size: 1.5em;
+        font-weight: bold;
+        border-bottom: #0F2027 2px solid;
+        width: 5%;
+        margin: auto;
+    }
+    td:nth-of-type(2) {
+        font-weight: bold;
+    }
+    td:nth-last-of-type(1) {
+        font-size: 1.2em;
+    }
+    th {
+        display: none;
+    }
+}
+
+@media (min-height: 550px) {
+    .content {
+        height: 500px;
+    }
 }
